--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
   <h1>Welcome to the Dominican Alliance Website</h1>
+  <img src="Screen Shot 2024-09-19 at 6.28.08 PM.png">
   <p>This is a placeholder for your future content.</p>
+  <p><strong>Misson's statements <br>
+  -<br>
+  -<br>
+  -<br>
+  </strong></p>
 </body>
 </html>
