--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Dominican Alliance</title>
 </head>
 <body>
+  background-color:rgb(128, 240, 255)
   <h1>Welcome to the Dominican Alliance Website</h1>
   <img src="Screen Shot 2024-09-19 at 6.28.08 PM.png">
-  <p>This is a placeholder for your future content.</p>
-  <p><strong>Misson's statements <br>
-  -<br>
-  -<br>
-  -<br>
-  </strong></p>
+  
+  <p><strong>Misson's statements <br></strong>
+  - The Dominican Alliance at University of Rhode island promotes the language,traditions,<br>
+    and heritage of the Dominican Republic.We are dedicated to educating students of all backgrounds<br>
+    while fostering an inclusive and strong community<br>
+  
+  </p>
 </body>
 </html>
