--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Dominican Alliance</title>
 </head>
 <body>
-  background-color:rgb(128, 240, 255)
+  <style>
+     background-color:rgb(128, 240, 255)
+  </style>
   <h1>Welcome to the Dominican Alliance Website</h1>
   <img src="Screen Shot 2024-09-19 at 6.28.08 PM.png">
   
