--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <style>
+    body {
      background-color:rgb(128, 240, 255)
+    };
   </style>
   <h1>Welcome to the Dominican Alliance Website</h1>
   <img src="Screen Shot 2024-09-19 at 6.28.08 PM.png">
