--- a/index.html
+++ b/index.html
@@ -1,24 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dominican Alliance</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dominican Alliance at URI</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: rgb(0, 45, 98);
+            color: white;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+        .logo, .group-photo {
+            width: 100%;
+            max-width: 400px;
+            height: auto;
+            margin: 20px auto;
+        }
+        .mission {
+            background-color: rgb(0,45,98);
+            padding: 20px;
+            border-radius: 5px;
+            text-align: left;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
-  <style>
-    body {
-     background-color:rgb(128, 240, 255)
-    };
-  </style>
-  <h1>Welcome to the Dominican Alliance Website</h1>
-  <img src="Screen Shot 2024-09-19 at 6.28.08 PM.png">
-  
-  <p><strong>Misson's statements <br></strong>
-  - The Dominican Alliance at University of Rhode island promotes the language,traditions,<br>
-    and heritage of the Dominican Republic.We are dedicated to educating students of all backgrounds<br>
-    while fostering an inclusive and strong community<br>
-  
-  </p>
+    <div class="container">
+        <!-- Logo Image -->
+        <img src="logo-placeholder.jpg" alt="Dominican Alliance Logo" class="logo">
+        
+        <!-- Group Photo -->
+        <img src="group-placeholder.jpg" alt="Group Photo" class="group-photo">
+        
+        <!-- Mission Statement -->
+        <div class="mission">
+            <p><strong>Mission's statements:</strong></p>
+            <p>- The Dominican Alliance at the University of Rhode Island promotes the language, traditions,</p>
+            <p>- and heritage of the Dominican Republic. We are dedicated to educating students of all backgrounds</p>
+            <p>- while fostering an inclusive and strong community.</p>
+        </div>
+    </div>
 </body>
 </html>
